# msg_downsampler

./: CMakeLists.txt  package.xml
docker/: Dockerfile  build.sh  interact.sh
launch/: compressed_image_downsampler.launch
rviz_config/: compressed_image_downsampler.rviz
src/: compressed_image_downsampler.cpp
